Closed Bug 1218742 Opened 9 years ago Closed 9 years ago

[CID 222163] leaked_storage: Failing to save or free storage allocated by Pk11Install_PlatformName_GetVerString

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox44 affected)

RESOLVED FIXED
Tracking Status
firefox44 --- affected

People

(Reporter: franziskus, Assigned: franziskus)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

Attachments

(1 file)

Pk11Install_PlatformName_GetVerString returns a char* allocated with PR_Malloc and thus has to be freed.
store string returned by Pk11Install_PlatformName_GetVerString and free after printing.
Attachment #8679400 - Flags: review?(martin.thomson)
Attachment #8679400 - Flags: review?(martin.thomson)
Attachment #8679400 - Flags: review+
Attachment #8679400 - Flags: checked-in?
https://hg.mozilla.org/projects/nss/rev/4d1e33bd4a18
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.22
Attachment #8679400 - Flags: checked-in?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: