Bug 1218742 - [CID 222163] leaked_storage: Failing to save or free storage allocated by Pk11Install_PlatformName_GetVerString, r=mt